pricing section created and styled -- issues with swiper.js Effect Coverflow implementation, code currently commented out and needs troubleshooting

--- a/03-BusinessAgency/style.css
+++ b/03-BusinessAgency/style.css
@@ -26,6 +26,13 @@ html {
     height: 0.2rem;
     background-color: #ddd;
 }
+
+:root {
+    --free-card-color: #0da5d3;
+    --basic-card-color: #bdba0e;
+    --standard-card-color: #e23b3b;
+    --premium-card-color: #3be286;
+}
 /* End of Common Styles */
 
 /* Navbar */
@@ -410,14 +417,16 @@ html {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    padding: 5rem;
 }
 
 .pricing-card {
-    width: 28rem;
-    height: 45rem;
+    width: 28rem !important;
+    height: 45rem !important;
     background-color: #181b1d;
     border-radius: 1rem;
     box-shadow: 2rem 2rem 6rem rgba(0, 0, 0, 0.7);
+    /* transform: rotateY(180deg); */
 }
 
 .pricing-card-front {
@@ -441,22 +450,22 @@ html {
 }
 
 .heading-free {
-    background: linear-gradient(to right, #087285, #0da5d3);
+    background: linear-gradient(to right, #087285, var(--free-card-color));
     border-radius: 1rem 1rem 0 0;
 }
 
 .heading-basic {
-    background: linear-gradient(to right, #946809, #bdba0e);
+    background: linear-gradient(to right, #946809, var(--basic-card-color));
     border-radius: 1rem 1rem 0 0;
 }
 
 .heading-standard {
-    background: linear-gradient(to right, #a10c14, #e23b3b);
+    background: linear-gradient(to right, #a10c14, var(--standard-card-color));
     border-radius: 1rem 1rem 0 0;
 }
 
 .heading-premium {
-    background: linear-gradient(to right, #0b7e48, #3be286);
+    background: linear-gradient(to right, #0b7e48, var(--premium-card-color));
     border-radius: 1rem 1rem 0 0;
 }
 
@@ -464,6 +473,93 @@ html {
     font-family: 'MADE Soulmaze', sans-serif;
     font-size: 7rem;
     font-weight: 300;
+    color: #fff;
+}
+
+.pricing-card-list {
+    margin-bottom: 0.5rem;
+}
+
+.list-free li {
+    color: var(--free-card-color);
+}
+.list-basic li {
+    color: var(--basic-card-color);
+}
+.list-standard li {
+    color: var(--standard-card-color);
+}
+.list-premium li {
+    color: var(--premium-card-color);
+}
+
+.pricing-card-list i {
+    font-size: 1.5rem;
+    width: 3rem;
+}
+
+.pricing-card-list span {
+    font-size: 1.8rem;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+}
+
+.pricing-card-btn {
+    width: 18rem;
+    height: 5rem;
+    margin-bottom: 3rem;
+    border-radius: 3rem;
+    border: none;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: 0.3rem 0.3rem 0.6rem rgba(0, 0, 0, 0.5);
+}
+
+.btn-free {
+    background: var(--free-card-color);
+}
+.btn-basic {
+    background: var(--basic-card-color);
+}
+.btn-standard {
+    background: var(--standard-card-color);
+}
+.btn-premium {
+    background: var(--premium-card-color);
+}
+
+.pricing-card-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotateY(180deg);
+    border-radius: 1rem;
+}
+
+.back-free {
+    background: linear-gradient(to right, #087285, var(--free-card-color))
+}
+
+.back-basic {
+    background: linear-gradient(to right, #946809, var(--basic-card-color));
+}
+
+.back-standard {
+    background: linear-gradient(to right, #a10c14, var(--standard-card-color))
+}
+
+.back-premium {
+    background: linear-gradient(to right, #0b7e48, var(--premium-card-color));
+}
+
+.pricing-card-back a {
+    font-size: 2.5rem;
     color: #fff;
 }
 /* End of Section 3 */
